	PR c++/84662 	* pt.c (tsubst_copy_and_build) <case TEMPLATE_ID_EXPR>: Use 	RETURN instead of return. 	<case POINTER_PLUS_EXPR>: Likewise. 	<case CONVERT_EXPR>: If op0 is error_mark_node, just return 	it instead of wrapping it into CONVERT_EXPR.

* g++.dg/cpp1y/pr84662.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@258146 138bc75d-0d04-0410-961f-82ee72b054a4